Update megaphone audio playback and add to storage

--- a/Resources/Prototypes/_RMC14/Voice/megaphone_speech_sounds.yml
+++ b/Resources/Prototypes/_RMC14/Voice/megaphone_speech_sounds.yml
@@ -2,7 +2,13 @@
   id: RMCMegaphone
   saySound:
     path: /Audio/_RMC14/Items/megaphone.ogg
+    params:
+      referenceDistance: 3
   askSound:
     path: /Audio/_RMC14/Items/megaphone.ogg
+    params:
+      referenceDistance: 3
   exclaimSound:
     path: /Audio/_RMC14/Items/megaphone.ogg
+    params:
+      referenceDistance: 3
