--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/bundles.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/bundles.yml
@@ -176,4 +176,5 @@
     - RMCLaserDesignator
     - RMCWhistle
     - RMCWeaponTaser
-    #TODO RMC14 Megaphone, Paper Map.
+    - RMCMegaphone
+    #TODO RMC14 Paper Map.
