--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
@@ -41,6 +41,9 @@
     sprite: _RMC14/Structures/Storage/Lockers/commander.rsi
   - type: AccessReader
     access: [["CMAccessCO"]]
+  - type: StorageFill
+    contents:
+      - id: RMCMegaphone
 
 - type: entity
   parent: CMLockerBase
@@ -195,6 +198,9 @@
     sprite: _RMC14/Structures/Storage/Lockers/qm.rsi
   - type: AccessReader
     access: [["CMAccessQM"]]
+  - type: StorageFill
+    contents:
+      - id: RMCMegaphone
 
 - type: entity
   parent: CMLockerBase
