big leap, most castes and xeno structures done, missing parasite icon and in guide

--- a/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
+++ b/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
@@ -16,6 +16,7 @@
   - RMCGuideMarineStructures
   - RMCGuideXenonidRoles
   - RMCGuideXenonidStructures
+  - RMCGuideXenonidMap
   - RMCGuideFood
   - RMCGuideDrinks
 
@@ -124,6 +125,7 @@
   - RMCGuideHiveStructures
   - RMCGuideResinHoles
 
+# Xenonid map icons
 - type: guideEntry
   parent: RMC
   id: RMCGuideXenonidMap
