--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -48,6 +48,13 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: synth
+    - type: NpcFactionMember
+      factions:
+      - Survivor
+    - type: IntelRescueSurvivorObjective
+    - type: RMCSurvivor
+    - type: RMCRibbon
+    - type: MotionDetectorTracked
     - type: MeleeWeapon
       soundHit:
         path: /Audio/_RMC14/Weapons/synthpunch1.ogg
@@ -103,18 +110,18 @@
     gloves: CMHandsInsulated
     shoes: RMCShoesWhite
     id: RMCIDCardSynthColony
-    ears: RMCHeadsetSynth
+    ears: CMHeadsetColony
     belt: CMBeltUtilityFilled
 
-#- type: entity
-#  parent: CMSpawnPointJobBase
-#  id: RMCSpawnPointSynthColonist
-#  name: synthetic colonist spawn point
-#  components:
-#  - type: SpawnPoint
-#    job_id: RMCJobSyntheticColony
-#  - type: Sprite
-#    state: syn_spawn
+- type: entity
+  parent: CMSpawnPointJobBase
+  id: RMCSpawnPointSynthColonist
+  name: synthetic colonist spawn point
+  components:
+  - type: SpawnPoint
+    job_id: RMCJobSyntheticColony
+  - type: Sprite
+    state: syn_spawn
 
 - type: playTimeTracker
   id: RMCJobSyntheticColony
