gives marine roles a displayweight they're displayed in the same order as in the overwatch console

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/combat_tech.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/combat_tech.yml
@@ -28,6 +28,7 @@
   overwatchSortPriority: -1
   overwatchRoleName: Combat Technicians
   roleWeight: 1
+  displayWeight: 1
   special:
   - !type:AddComponentSpecial
     components:
