--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/smart_gun_operator.yml
@@ -29,6 +29,7 @@
   overwatchShowName: true
   overwatchRoleName: Smart Gun Operator
   roleWeight: 1
+  displayWeight: 3
   special:
   - !type:AddComponentSpecial
     components:
