I am stupid - Added static physics to roof

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Tools/tents.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Tools/tents.yml
@@ -84,6 +84,8 @@
   - type: Transform
     anchored: true
     noRot: true
+  - type: Physics
+    bodyType: Static
   - type: Clickable
   - type: Sprite
     sprite: _RMC14/Objects/tents.rsi
