--- a/Resources/Prototypes/_RMC14/Entities/Objects/patron_figurines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/patron_figurines.yml
@@ -1486,3 +1486,14 @@
     state: durgan_chum_carlyle
   - type: PatronFigurine
     id: c66c10c5-80f8-4251-a545-6d473638259a
+
+- type: entity
+  parent: RMCBaseFigurinePatron
+  id: RMCFigurinePatronAdrianArchangelGutierrez
+  name: Adrian 'Archangel' Gutierrez figurine
+  description: ""
+  components:
+  - type: Sprite
+    state: adrian_archangel_gutierrez
+  - type: PatronFigurine
+    id: 846a3f90-ba27-4c17-a00b-93818511a7a6
