--- a/Resources/Prototypes/_RMC14/Entities/Objects/Fun/crayons.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Fun/crayons.yml
@@ -58,6 +58,14 @@
     sprite: _RMC14/Objects/Misc/paint.rsi
   - type: Crayon
     capacity: 30
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 5
+        - ReagentId: MindbreakerToxin
+          Quantity: 0
 
 #red
 - type: entity
