--- a/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
+++ b/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
@@ -69,9 +69,11 @@
     whitelist:
       components:
       - Marine
+      - Xeno
   - type: UncloakOnHit
   - type: ExtinguishFire
   - type: IgnorePredictionHit
+  - type: XenoBonusAcid
 
 - type: entity
   parent: XenoAcidSprayWeak
