--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -224,6 +224,7 @@
     enragedHealAmount: 100
     paralyzeTime: 0
     throwSpeed: 12
+    dazeTime: 4
     damage:
       groups:
         Brute: 20
