--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
@@ -79,6 +79,10 @@
     - UNMC
   - type: UserIFF
     faction: FactionMarine
+  - type: XenoCrusherChargable
+    damage:
+      types:
+        Blunt: 40
 
 - type: entity
   parent: RMCSentry
