--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/grille.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/grille.yml
@@ -90,6 +90,11 @@
       damage:
         types:
           Blunt: 40
+    - type: XenoCrusherChargable
+      instantDestroy: true
+      damage:
+      types:
+        Blunt: 80
 
 - type: entity
   id: RMCGrilleBroken
