--- a/Resources/Prototypes/_RMC14/Entities/Structures/fence.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/fence.yml
@@ -129,6 +129,10 @@
   - type: Construction
     graph: RMCFenceHybrisaElectric
     node: fenceMetal
+  - type: XenoCrusherChargable
+    damage:
+      types:
+        Blunt: 50
 
 - type: entity
   parent: RMCFenceBroken
