--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/tesla.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/tesla.yml
@@ -102,6 +102,10 @@
   - type: RMCRepairable
   - type: RMCNameItemOnVend
     item: Sentry
+  - type: XenoCrusherChargable
+    damage:
+      types:
+        Blunt: 40
 
 - type: entity
   parent: RMCBaseTesla
