--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/barricade_metal.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/barricade_metal.yml
@@ -68,6 +68,10 @@
     damage:
       types:
         Blunt: 22
+  - type: XenoCrusherChargable
+    damage:
+      types:
+        Blunt: 150
 
 - type: entity
   parent: RMCBarricadeUpgradeBase
