--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/SMGs/MP90.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/SMGs/MP90.yml
@@ -25,9 +25,9 @@
     - FullAuto
     recoilWielded: 0.1
     recoilUnwielded: 3
-    scatterWielded: 14
+    scatterWielded: 12
     scatterUnwielded: 45
-    baseFireRate: 10
+    baseFireRate: 8
     burstScatterMult: 3
     modifiers:
       Burst:
@@ -90,7 +90,7 @@
 
 
 - type: entity
-  parent: BaseMagazineRifle
+  parent: CMMagazineRifleBase
   id: RMCMagazineSMGMP90
   name: "UN MP90 magazine (10x20mm)"
   description: "A 10x20mm magazine for the UN MP90."
@@ -122,7 +122,7 @@
 
 
 - type: entity
-  parent: BaseMagazineRifle
+  parent: CMMagazineRifleBase
   id: RMCAPMagazineSMGMP90
   name: "UN MP90 APmagazine (10x20mm)"
   description: "A AP10x20mm magazine for the UN MP90."
