--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/armylathe.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/armylathe.yml
@@ -39,7 +39,7 @@
   - type: MaterialStorage
     storage:
       CMSteel: 800
-      RMCPlastic: 100
+      Plastic: 100
     whitelist:
       components:
       - FloorTile
@@ -81,7 +81,7 @@
   - type: StaticPrice
     price: 800
   - type: Machine
-    board: CMAutolatheMachineCircuitboard
+    board: RMCArmylatheMachineCircuitboard
   - type: Corrodible
     isCorrodible: false
 
