Preloaded plastic fixed

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/armylathe.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/armylathe.yml
@@ -39,7 +39,7 @@
   - type: MaterialStorage
     storage:
       CMSteel: 800
-      Plastic: 100
+      RMCPlastic: 100
     whitelist:
       components:
       - FloorTile
