--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/prop_computers.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/prop_computers.yml
@@ -57,7 +57,7 @@
 
 - type: entity
   parent: RMCPropComputerBase
-  id: RMCCommunicationsConsole
+  id: RMCPersonalDesktop
   name: personal desktop
   components:
   - type: Sprite
