--- a/Resources/Prototypes/_RMC14/Reagents/medicine.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/medicine.yml
@@ -608,6 +608,8 @@
   id: RMCMethylphenidate
   name: reagent-name-rmcmethylphenidate
   desc: reagent-desc-rmcmethylphenidate
+  physicalDesc: reagent-physical-desc-crystalline
+  flavor: medicine
   color: "#C8A5DC"
   metabolisms:
     Medicine:
@@ -657,7 +659,16 @@
         time: 1.5 #TODO max 30
         refresh: false
       - !type:Emote
-        emote: [ twitches, drools, moans, giggles ]
+        emote: twitches
+        probability: 0.05
+      - !type:Emote
+        emote: drools
+        probability: 0.05
+      - !type:Emote
+        emote: moans
+        probability: 0.05
+      - !type:Emote
+        emote: giggles
         probability: 0.05
       - !type:GenericStatusEffect
         key: Jitter
