--- a/Resources/Prototypes/_RMC14/Reagents/narcotics.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/narcotics.yml
@@ -30,7 +30,7 @@
         time: 0.5 #TODO max 10
         refresh: false
       - !type:GenericStatusEffect
-        condition:
+        conditions:
         - !type:ReagentThreshold #TODO Hallucinations +5 no max at 30 OD
           min: 30                #TODO RandomWalk at 30 OD
         key: Jitter
@@ -38,7 +38,7 @@
         time: 2.5
         refresh: false
       - !type:GenericStatusEffect
-        condition:
+        conditions:
         - !type:ReagentThreshold #TODO 0.5 brain damage/s at 50 OD
           min: 50
         key: Unconscious
