--- a/Resources/Prototypes/_RMC14/Reagents/medicine.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/medicine.yml
@@ -670,8 +670,4 @@
       - !type:Emote
         emote: giggles
         probability: 0.05
-      - !type:GenericStatusEffect
-        key: Jitter
-        type: Add
-        time: 2.5
-        refresh: false
+      - !type:Jitter
