Better charge handling, DoC stuff, fixing

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   abstract: true
   parent: RMCSentryPremade
   id: RMCBaseSentry #Conversion Rate for turret vision range = CM + 1
@@ -80,7 +80,7 @@
   - type: UserIFF
     faction: FactionMarine
   - type: XenoCrusherChargable
-    damage:
+    setDamage:
       types:
         Blunt: 40
 
