--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/tesla.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/tesla.yml
@@ -103,7 +103,7 @@
   - type: RMCNameItemOnVend
     item: Sentry
   - type: XenoCrusherChargable
-    damage:
+    setDamage:
       types:
         Blunt: 40
 
