--- a/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/tables.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/tables.yml
@@ -37,7 +37,8 @@
   - type: XenoToggleChargingDamage
     destroy: true
   - type: XenoCrusherChargable
-    instantDestroy: True
+    instantDestroy: true
+    passOnDestroy: true
 
 # Reinforced
 - type: entity
