--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/crates.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/crates.yml
@@ -102,6 +102,11 @@
   - type: RMCCanBeFultoned
   - type: ReceiverXenoClaws
     minimumClawStrength: ImpossiblySharp
+  - type: XenoCrusherChargable
+    setDamage:
+      types:
+        Blunt: 0
+    throwRange: 2
 
 - type: entity
   parent: RMCCrateBase
