--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/grille.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/grille.yml
@@ -91,10 +91,11 @@
         types:
           Blunt: 40
     - type: XenoCrusherChargable
-      instantDestroy: true
-      damage:
+      setDamage:
       types:
         Blunt: 80
+      destroyDamage: 100
+      passOnDestroy: true
 
 - type: entity
   id: RMCGrilleBroken
