--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/walls.yml
@@ -28,6 +28,7 @@
   - type: Construction
     graph: CMGirder
     node: wall
+  - type: XenoCrusherChargable
 
 - type: entity
   parent: CMWallMetal
