--- a/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
+++ b/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
@@ -55,6 +55,7 @@
   - type: TimedDespawn
     lifetime: 0.6
   - type: DamageOnCollide
+    acidic: true
     acidComboDuration: 40
     acidComboDamage:
       types:
@@ -73,7 +74,6 @@
   - type: UncloakOnHit
   - type: ExtinguishFire
   - type: IgnorePredictionHit
-  - type: XenoBonusAcid
 
 - type: entity
   parent: XenoAcidSprayWeak
