--- a/Resources/Prototypes/_RMC14/Entities/Structures/Doors/Shutters/shutters.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Doors/Shutters/shutters.yml
@@ -88,6 +88,7 @@
     stageLoss: 2
     destroy: true
     minimumStage: 4
+  - type: XenoCrusherChargable
 
 - type: entity
   parent: RMCShutterBase
