--- a/Resources/Prototypes/_RMC14/Entities/Structures/Doors/Shutters/shutters.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Doors/Shutters/shutters.yml
@@ -89,6 +89,7 @@
     destroy: true
     minimumStage: 4
   - type: XenoCrusherChargable
+    instantDestroy: true
 
 - type: entity
   parent: RMCShutterBase
