--- a/Resources/Prototypes/_RMC14/Reagents/narcotics.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/narcotics.yml
@@ -12,23 +12,14 @@
       metabolismRate: 0.1
       effects:
       - !type:Emote
-        emote: twitches
-        probability: 0.05
-      - !type:Emote
-        emote: drools
-        probability: 0.05
-      - !type:Emote
-        emote: moans
-        probability: 0.05
-      - !type:Emote
-        emote: giggles
+        emote: Laugh #TODO twitches, drools, moans.
+        chatMessages: giggles
         probability: 0.05
       - !type:GenericStatusEffect
         key: SeeingRainbows
         component: SeeingRainbows
         type: Add
         time: 0.5 #TODO max 10
-        refresh: false
       - !type:Jitter
         conditions:
         - !type:ReagentThreshold #TODO Hallucinations +5 no max at 30 OD
@@ -41,7 +32,6 @@
         component: RMCUnconscious
         type: Add
         time: 10
-        refresh: false
 
 - type: reagent
   parent: RMCSpaceDrugs
@@ -54,23 +44,14 @@
       metabolismRate: 0.1
       effects:
       - !type:Emote
-        emote: twitches
-        probability: 0.05
-      - !type:Emote
-        emote: drools
-        probability: 0.05
-      - !type:Emote
-        emote: moans
-        probability: 0.05
-      - !type:Emote
-        emote: giggles
+        emote: Laugh #TODO twitches, drools, moans.
+        chatMessages: giggles
         probability: 0.05
       - !type:GenericStatusEffect
         key: SeeingRainbows
         component: SeeingRainbows
         type: Add
         time: 0.75 #TODO max 15
-        refresh: false
       - !type:Jitter
         conditions:
         - !type:ReagentThreshold #TODO Hallucinations +5 no max at 30 OD
@@ -83,4 +64,3 @@
         component: RMCUnconscious
         type: Add
         time: 10
-        refresh: false
